--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,33 @@ version: '3'
 
 services:
   app:
-    build: ./docker/app
+    build: .docker/app
     working_dir: /var/www/src
+    ports:
+      - target: ${VITE_PORT:-5173}
+        published: ${VITE_PORT:-5173}
+        protocol: tcp
+        mode: host
     volumes:
       - type: bind
         source: ./src
         target: /var/www/src
+      # 以下は頻繁に変更する時以外はコメントアウトでも問題なし(コンテナが最新である前提)
+      - type: bind
+        source: .docker/app/php.ini
+        target: /usr/local/etc/php/php.ini
+      - type: bind
+        source: .docker/app/www.conf
+        target: /usr/local/etc/php-fpm.d/www.conf
+      - type: bind
+        source: .docker/app/xdebug.ini
+        target: /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+    environment:
+      - VITE_HOST=localhost:${WEB_PUBLISHED_PORT:-8080}
+      - VITE_PORT=${VITE_PORT:-5173}
 
   nginx:
-    build: ./docker/nginx
+    build: .docker/nginx
     ports:
       - target: 80
         published: ${WEB_PUBLISHED_PORT:-8080}
@@ -20,9 +38,12 @@ services:
       - type: bind
         source: ./src/public
         target: /var/www/src/public
+      - type: bind
+        source: .docker/nginx/default.conf
+        target: /etc/nginx/conf.d/default.conf
 
   mysql:
-    build: ./docker/mysql
+    build: .docker/mysql
     ports:
       - target: 3306
         published: ${DB_PUBLISHED_PORT:-3306}
